<resources>
    <string name="font">sans-serif-thin</string>
    <string name="app_name">Takuzu</string>
    <string name="main_button_more">...</string>
    <string name="_32">32</string>
    <string name="_16">16</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_4">4</string>
    <string name="_12">12</string>
    <string name="zdenek_david">Zdeněk David</string>
    <string name="samuel_kodytek">Samuel Kodytek</string>
    <string name="_0percent">0%</string>
    <string name="back">BACK</string>
    <string name="main_menu">main menu</string>
    <string name="well_done">Well done!</string>
    <string name="default_high_score">0</string>

    <string name="saved_data">net.zdendukmonarezio.net.data</string>
    <string name="saved_high_score">net.zdendukmonarezio.net.score</string>
</resources>
